force-app/main/default/objects/custom_create128__c/custom_create128__c.object-meta.xml
<CustomObject>
    <label>Custom created object128</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects128</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>