force-app/main/default/objects/custom_create128__c/fields/custom_create_128field587__c.field-meta.xml
<CustomField>
    <fullName>custom_create_128field587__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 128field587</label>
    <type>Checkbox</type>
</CustomField>